// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rule-empty-line-before не ошибки индекс теста: 0 1`] = `Array []`;

exports[`rule-empty-line-before не ошибки индекс теста: 0 2`] = `Array []`;

exports[`rule-empty-line-before не ошибки индекс теста: 1 1`] = `Array []`;

exports[`rule-empty-line-before не ошибки индекс теста: 1 2`] = `Array []`;

exports[`rule-empty-line-before не ошибки индекс теста: 2 1`] = `Array []`;

exports[`rule-empty-line-before не ошибки индекс теста: 2 2`] = `Array []`;

exports[`rule-empty-line-before ошибки индекс теста: 0 1`] = `
Array [
  Object {
    "column": 1,
    "endColumn": 2,
    "endLine": 6,
    "line": 4,
    "rule": "rule-empty-line-before",
    "severity": "error",
    "text": "Expected empty line before rule (rule-empty-line-before)",
  },
]
`;

exports[`rule-empty-line-before ошибки индекс теста: 0 2`] = `Array []`;

exports[`rule-empty-line-before ошибки индекс теста: 1 1`] = `
Array [
  Object {
    "column": 4,
    "endColumn": 5,
    "endLine": 5,
    "line": 3,
    "rule": "rule-empty-line-before",
    "severity": "error",
    "text": "Expected empty line before rule (rule-empty-line-before)",
  },
]
`;

exports[`rule-empty-line-before ошибки индекс теста: 1 2`] = `Array []`;
